Fix overflow on tab__content

--- a/app/assets/stylesheets/uploadcare/blocks/tab/tab__content.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/tab/tab__content.pcss
@@ -6,7 +6,5 @@
   align-items: center;
   justify-content: center;
 
-  overflow-y: auto;
-
   padding: 0 20px;
 }
